# agentic-projects

./: .gitignore  CLAUDE.md
RAG_agent/: .gitignore  QUICK_START.md  README.md  init_project.py  requirements.txt  settings.py
RAG_agent/documents/: ARCHITECTURE.md  DEV_GUIDE.md  INDEX.md  RAG_README.md  SECURITY_README.md  (+1 more)
code_rag_agent/: .env.example  .gitignore  FILE_STRUCTURE.md  PROMPT_IMPROVEMENTS.md  README.md  RETRIEVER_PROMPT_IMPROVEMENTS.md  SCRIPTS_SUMMARY.md  SETUP_STATUS.md  app.py  const.py  init_project.py  pyproject.toml  requirements.txt  settings.py
code_rag_agent/documents/: AGENT_ARCHITECTURE.md  CHUNKING_ARCHITECTURE.md  RETRIEVAL_ARCHITECTURE.md  task_prd.md
code_rag_agent/models/: __init__.py  chunk.py  conversation.py  intent.py  retrieval.py  router.py  synthesis.py
code_rag_agent/prompts/: __init__.py  intent_prompt.py  retriever_prompts.py  router_prompt.py  router_prompts.py  synthesis_prompt.py  synthesizer_prompts.py
code_rag_agent/scripts/: README.md  __init__.py
code_rag_agent/scripts/data_pipeline/: __init__.py  build_all_indices.py
code_rag_agent/scripts/data_pipeline/indexing/: __init__.py  build_all_indices.py  build_bm25_index.py  build_faiss_index.py  build_vector_index.py
code_rag_agent/scripts/data_pipeline/ingestion/: __init__.py  clone_httpx_repo.py
code_rag_agent/scripts/data_pipeline/processing/: __init__.py  chunk_code.py  process_all_files.py  process_markdown.py  process_text_files.py  utils.py
code_rag_agent/scripts/utilities/: visualize_graph.py
code_rag_agent/src/: __init__.py
code_rag_agent/src/agent/: __init__.py  graph.py  routing.py  state.py
code_rag_agent/src/agent/nodes/: __init__.py  conversation_memory.py  input_preprocessor.py  retrieval.py  retriever.py  router.py  security_gateway.py  synthesis.py
code_rag_agent/src/indexing/: __init__.py
code_rag_agent/src/llm/: __init__.py  llm.py  workers.py
code_rag_agent/src/rag/: __init__.py  hybrid_scorer.py  vector_search.py
code_rag_agent/src/retrieval/: __init__.py  chunk_loader.py  context_expander.py  faiss_store.py  fast_path_router.py  hybrid_retriever.py  metadata_filter.py
code_rag_agent/src/security/: __init__.py  prompt_guard.py  validator.py
code_rag_agent/src/synthesis/: __init__.py
code_rag_agent/tests/: test_processing_pipeline.py  test_retrieval.py
(+53 files in other folders)
